--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
       display: flex;
     }
 
-    .itu .warna {
+    .itu .eirik {
+      color: green;
+      margin-left: 5px;
+    }
+    .itu .manu {
+      color: green;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+    .itu .oyvind {
       color: green;
       margin-left: 5px;
     }
@@ -45,7 +54,11 @@
     <hr>
     <div class="itu">
       <p><i>Co-written by:</i></p>
-      <p class="warna"><i>Eirik Folkestad, Manu Gopinathan & Øyvind Nygard</i></p>
+      <p class="eirik"><i>Eirik Folkestad</i></p>
+      <p><i>,</i></p>
+      <p class="manu"><i>Manu Gopinathan</i></p>
+      <p><i>&</i></p>
+      <p class="oyvind"><i>Øyvind Nygard</i></p>
     </div>
     
     <p>In the last decade, the area of artificial intelligence (AI) has exploded with interesting and promising results. With major achievements in image recognition, speech recognition and highly complex games, AI continues to disrupt society. This blog post will discuss practical applications of AI, optimization and interpretability of deep learning models and reinforcement learning (RL), based on the <u>2018 REWORK Deep Learning Summit</u> in Toronto. Four software engineers from <u>Knowit</u> had the pleasure of travelling to Canada to attend this conference, and with renowned speakers such as Geoff Hinton attending, it turned out be an insightful experience.</p><br>
